images our team

--- a/src/app/Component/about/about.component.html
+++ b/src/app/Component/about/about.component.html
@@ -95,7 +95,7 @@
             <div class="col-lg-3 col-sm-6 col-xs-12">
                 <div class="single-team">
                     <div class="img-area">
-                        <img src="assets/image/team1.jpg" class="img-fluid" alt="">
+                        <img src="assets/image/Men1.jpg" class="img-fluid" alt="">
                         <div class="social">
                             <ul class="list-inline">
                                 <li><a href="#url"><i class="bi bi-linkedin"></i></a></li>
@@ -105,15 +105,15 @@
                         </div>
                     </div>
                     <div class="img-text">
-                        <h4>Charlotte lucy</h4>
-                        <p>Founder and CEO</p>
+                        <h4>Maifuz Alam Shaikh</h4>
+                        <p>CEO & Founder</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12 mt-sm-0 mt-5">
                 <div class="single-team">
                     <div class="img-area">
-                        <img src="assets/image/team2.jpg" class="img-fluid" alt="">
+                        <img src="assets/image/Men2.jpg" class="img-fluid" alt="">
                         <div class="social">
                             <ul class="list-inline">
                                 <li><a href="#url"><i class="bi bi-linkedin"></i></a></li>
@@ -123,15 +123,15 @@
                         </div>
                     </div>
                     <div class="img-text">
-                        <h4>Olivia stella</h4>
-                        <p>Co Founder and COO</p>
+                        <h4>Khalil Shaikh</h4>
+                        <p>CO Founder and Managing Director</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12 mt-lg-0 mt-5">
                 <div class="single-team">
                     <div class="img-area">
-                        <img src="assets/image/team3.jpg" class="img-fluid" alt="">
+                        <img src="assets/image/Women3.jpg" class="img-fluid" alt="">
                         <div class="social">
                             <ul class="list-inline">
                                 <li><a href="#url"><i class="bi bi-linkedin"></i></a></li>
@@ -141,15 +141,15 @@
                         </div>
                     </div>
                     <div class="img-text">
-                        <h4>Jackson jack</h4>
-                        <p>HR Manager</p>
+                        <h4>Maria Khan</h4>
+                        <p>Head of Human Resource</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12 mt-lg-0 mt-5">
                 <div class="single-team">
                     <div class="img-area">
-                        <img src="assets/image/team4.jpg" class="img-fluid" alt="">
+                        <img src="assets/image/Women4.jpg" class="img-fluid" alt="">
                         <div class="social">
                             <ul class="list-inline">
                                 <li><a href="#url"><i class="bi bi-linkedin"></i></a></li>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="img-text">
-                        <h4>Robert Branson</h4>
+                        <h4>Sofiya Zariwala</h4>
                         <p>Project Leader</p>
                     </div>
                 </div>
